# RL_navigation

./: README.md  Readme.txt
RL/: DDPG.py  DDPG_test.py  DDQN.py  DDQN_test.py  dwa_test.py  (+26 more)
rl_navigation/: CMakeLists.txt  package.xml
rl_navigation/config/: real_time_cost_map2.yaml  real_time_cost_map_igor.yaml
rl_navigation/include/: pub_global_robot_state.h  pub_odom_tf.h
rl_navigation/launch/: global_planner2.launch  gmapping.launch  igor_RL.launch  igor_dwa.launch  igor_move_base.launch  move_base.launch  turtlebot3_gmapping.launch  turtlebot3_navigation.launch  turtlebot3_stage_1.launch  turtlebot3_unknown_navigation.launch  unknown_gmapping.launch  unknown_move_base.launch  unknown_navigation.launch
rl_navigation/maps/: map.pgm  map.xcf  map2.pgm  map2_crop.pgm  map3.pgm  map3.yaml  map3_crop.pgm
rl_navigation/param/: costmap_common_params_burger.yaml  costmap_common_params_igor.yaml  dwa_local_planner_params_burger.yaml  dwa_local_planner_params_igor.yaml  global_costmap_params.yaml  global_costmap_params_igor.yaml  local_costmap_params.yaml  local_costmap_params_igor.yaml
rl_navigation/rviz/: cost_map.rviz  gmapping.rviz  igor_RL.rviz  igor_dwa.rviz  path.rviz  turtlebot3_navigation.rviz
rl_navigation/src/: pub_global_robot_state.cpp  pub_map_odom_tf.cpp  pub_odom_tf.cpp
rl_navigation/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
rl_navigation/worlds/: train_world1.world  train_world2.world  train_world3.world
rl_navigation/worlds/world2/: model.config  model.sdf
rl_navigation/worlds/world3/: model.config  model.sdf
(+6 files in other folders)
